src/test/ui/nll/user-annotations/dump-fn-method.stderr
error: user substs: UserSubsts { substs: [&ReStatic u32], user_self_ty: None }
  --> $DIR/dump-fn-method.rs:30:13
   |
LL |     let x = foo::<&'static u32>;
   |             ^^^^^^^^^^^^^^^^^^^

error: user substs: UserSubsts { substs: [^0, u32, ^1], user_self_ty: None }
  --> $DIR/dump-fn-method.rs:36:13
   |
LL |     let x = <_ as Bazoom<u32>>::method::<_>;
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: user substs: UserSubsts { substs: [u8, &ReStatic u16, u32], user_self_ty: None }
  --> $DIR/dump-fn-method.rs:45:13
   |
LL |     let x = <u8 as Bazoom<&'static u16>>::method::<u32>;
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: user substs: UserSubsts { substs: [^0, ^1, u32], user_self_ty: None }
  --> $DIR/dump-fn-method.rs:53:5
   |
LL |     y.method::<u32>(44, 66);
   |     ^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 4 previous errors

